<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".OtpVerifyFragment">

    <TextView
        android:id="@+id/tv_otp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_55"
        android:gravity="center"
        android:text="@string/otp_suggest_label"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_31sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_otp_decs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/otp_verify_title"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_title" />

    <TextView
        android:id="@+id/tv_otp_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/otp_code"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_otp_decs"
        app:layout_constraintStart_toStartOf="@+id/tv_otp_decs"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_decs" />

    <include
        android:id="@+id/otp_verify"
        layout="@layout/fragment_otp_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/resend_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_55"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_verify">

        <TextView
            android:id="@+id/tv_resend_title"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Don't receive it yet?"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp" />

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/dimen_18"
            android:text="Send again"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/dimen_16sp" />

    </LinearLayout>


    <TextView

        android:id="@+id/tv_resend_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_13"
        android:text="@string/resend_code_60s"
        android:textColor="@color/disable_black"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/resend_layout"
        app:layout_constraintTop_toBottomOf="@+id/resend_layout" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_23"
        android:layout_marginEnd="@dimen/dimen_23"
        android:layout_marginBottom="@dimen/dimen_21"
        android:background="@drawable/black_round_background"
        android:text="@string/button_next"
        android:textColor="@color/disable_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>